@@ -1,3 +1,7 @@
+2005-02-09  John W. Eaton  <jwe@octave.org>
+
+	* configure.in: Check for canonicalize_file_name and resolvepath.
+
 2005-02-02  John W. Eaton  <jwe@octave.org>
 
 	* config.guess, config.sub: Update from FSF sources.
